--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<!-- main2 -->
 	<div class="main2">
 		<p class="m2_p">
-			距离<span style="color: #f4fc7b">2018</span>考研，还剩<span class="sbg">1</span><span class="sbg">1</span><span class="sbg">3</span>天
+			距离<span style="font-size: 1.35rem">2018</span>考研，还剩<span class="sbg">1</span><span class="sbg">1</span><span class="sbg">3</span>天
 		</p>
 		<p class="m2_p1">测一测距离名校，还差多少分</p>
 		<form action="">
